manifests/recesser/schandler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schandler
  name: schandler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schandler
  template:
    metadata:
      labels:
        app: schandler
    spec:
      serviceAccountName: schandler
      containers:
      - name: schandler
        image: recesser/schandler
        imagePullPolicy: IfNotPresent
        command: ["schandler"]
